--- a/XFDemo/XFDemo.iOS/XFDemo.iOS.csproj
+++ b/XFDemo/XFDemo.iOS/XFDemo.iOS.csproj
@@ -148,6 +148,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>6.5.1</Version>
+    </PackageReference>
     <PackageReference Include="Plugin.Permissions">
       <Version>3.0.0.12</Version>
     </PackageReference>
@@ -168,5 +171,8 @@
       <Project>{B9CC0DCB-16CD-4BC1-9A87-83086206D169}</Project>
       <Name>XFDemo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\image_default.png" />
   </ItemGroup>
 </Project>
